--- a/hello.html
+++ b/hello.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <section class="firstclass">
-        Hi! Great stuff man!? 2jajaja denk het niet
+        Hi! Great stuff man!? 2jajaja of toch wel!
     </section>
 </body>
 </html>
